# flipdot

./: .travis.yml  CMakeLists.txt  README  README.md
FlipDot.Core/: CMakeLists.txt  README.md  library.cpp  library.h
FlipDot.Core.Tests/: CMakeLists.txt  FlipDotCircuit.cpp  FlipDotCircuit.h  RegressionTest.cpp  RegressionTest.h
FlipDot.Core.Tests/ProofOfConceptBinary/: FlipDot30x8.elf
FlipDot.Tests.Support/: CMakeLists.txt  ClockedCircuit.cpp  ClockedCircuit.h  ClockedCircuitComponent.cpp  ClockedCircuitComponent.h  ClockedCircuitException.h  ClockedPin.cpp  ClockedPin.h  ClockedPinBus.h  ClockedPinBusBase.cpp  ClockedPinBusBase.h  ClockedPinValue.h  DerivedClockedPinBus.h
FlipDot.Tests.Support.Simulator/: AvrSimulator.cpp  AvrSimulator.h  CMakeLists.txt  SimulatorPorts.h
FlipDot.Tests.Support/Components/: Atmega88PA.cpp  Atmega88PA.h  FlipDotDisplay.h  SerialToParallel_74HC595.cpp  SerialToParallel_74HC595.h
cmake/: COPYING-CMAKE-SCRIPTS  FindLibElf.cmake
